--- a/install/unit.service
+++ b/install/unit.service
@@ -1,6 +1,8 @@
 [Unit]
 # TODO SEEDMS change description to reflect the micro-service
 Description=Micro-Service Seed
+After=cockroach.service
+Requires=cockroach.service
 
 [Install]
 WantedBy=multi-user.target
