- Refactor/upgrade - Use github.com/tomogoma/crdb.Config - Appengine psql connection configs - Improve README's - Use semantic versioning - Introduce http API documentation

--- a/install/conf.yml
+++ b/install/conf.yml
@@ -25,6 +25,21 @@ serviceConfig:
   # should be deleted once the system is set up
   masterAPIKey:
 
+  # allowedOrigins is a list of entries provided for Access-Control-Allow-Origin header
+  # It takes the formats:
+  #
+  # Allow all origins access
+  # - "*"
+  #
+  # or Allow specific domains e.g. "http://localhost"
+  # - "domain1"
+  # - "domain2"
+  # - ...
+  #
+  # or Block all other domains, but the serving host:
+  # "null" or "" or left empty
+  allowedOrigins:
+
 
 
 # database contains configuration values for accessing CockroachDB as the
